// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly handle user interactions 1`] = `
Array [
  Array [
    Object {
      "avatar": "",
      "groupCount": 3,
      "login": "admin",
      "name": "Admin Istrator",
    },
  ],
]
`;

exports[`should render and open the modal 1`] = `
<a
  href="#"
  key="remove-member-button"
  onClick={[Function]}
>
  organization.members.remove
</a>
`;

exports[`should render and open the modal 2`] = `
Array [
  <a
    href="#"
    key="remove-member-button"
    onClick={[Function]}
  />,
  <Modal
    contentLabel="users.remove"
    key="remove-member-modal"
    onRequestClose={[Function]}
  />,
]
`;
